--- a/Dinosour game/style.css
+++ b/Dinosour game/style.css
@@ -23,16 +23,17 @@ body {
 
 .score {
   position: absolute;
-  font-size: 2vmin;
+  font-size: 3vmin;
   right: 1vmin;
   top: 1vmin;
 }
 
 .start-screen {
   position: absolute;
-  font-size: 3vmin;
+  font-size: 5vmin;
   top: 50%;
   left: 50%;
+  /* put text in the middle */
   transform: translate(-50%, -50%);
 }
 
@@ -60,7 +61,7 @@ body {
 
 .cactus {
   position: absolute;
-  left: calc(var(--bottom) * 1%);
+  left: calc(var(--left) * 1%);
   height: 30%;
   bottom: 0;
 }
